fix contrast issue

--- a/css/global.css
+++ b/css/global.css
@@ -5,7 +5,7 @@
 /* variables */
 /* I could do better next time :) dirty code! :( */
 :root{
-  --btn-special: rgb(66, 108, 243);
+  --btn-special: rgb(8, 38, 136);
   --highligth:rgb(143, 143, 143);
 
   --btn-faded-color:  rgb(216, 214, 214);
