--- a/css/mobile.css
+++ b/css/mobile.css
@@ -74,6 +74,11 @@ body{
 .navbar-main .menu li:nth-child(5){
   background-color: var(--btn-special);
 }
+
+.navbar-main .menu li:nth-child(5) a{
+  color: rgb(255, 255, 255);
+}
+
 .navbar-main .menu li a{
   text-decoration: none;
 }
